refactor: OpenRewrite 도입 및 자동 코드 정리 적용
수동 실행용 OpenRewrite 설정 후 1회 자동 정리 적용.

설정:
- 플러그인/레시피(rewrite-migrate-java, rewrite-static-analysis) 추가
- 활성 레시피: UpgradeToJava21, CommonStaticAnalysis
- palantir과 충돌하는 import 와일드카드 묶기는 rewrite.yml의 no-wildcard
  스타일로 차단 (import 정렬 자체는 이후 spotlessApply가 정리)

적용 내역:
- SequencedCollection: list.get(0)/get(size-1) → getFirst()/getLast()
- FinalClass: 유틸 클래스 final
- UnnecessaryParentheses / ExplicitInitialization(= null 제거)
  / NeedBraces(중괄호) / MultipleVariableDeclarations
- String.format의 \n→%n 변환(UsePortableNewlines)은 텔레그램 와이어 포맷
  보존 위해 수동 제외

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>